# py-import-from-object

./: .gitignore  flake.nix  pyproject.toml  test.py
import_from_object/: __init__.py  assets.py  container.py
tests/: simple.py
